alteracao do titulo

--- a/abntex2-modelo-trabalho-academico.tex
+++ b/abntex2-modelo-trabalho-academico.tex
@@ -95,7 +95,8 @@
 % ---
 % Informações de dados para CAPA e FOLHA DE ROSTO
 % ---
-\titulo{Um plugin de mapas conceituais para o Moodle}
+\titulo{Uma Ferramenta de Mapeamento Conceitual para Moodle integrada
+	ao CMPaaS}
 \autor{Israel Henrique Silva de Lima}
 \local{Vitória}
 \data{2016}
