--- a/abntex2-modelo-references.bib
+++ b/abntex2-modelo-references.bib
@@ -51,6 +51,27 @@
 	year = {2010}
 }
 
+@article{Dougiamas2003,
+	abstract = {This paper summarizes a PhD research project that has contributed towards the development of Moodle - a popular open-source course management system (moodle.org). In this project we applied theoretical perspectives such as "social constructionism" and "connected knowing" to the analysis of our own online classes as well as the growing learning community of other Moodle users. We used the mode of participatory action research, including techniques such as case studies, ethnography, learning environment surveys and design methodologies. This ongoing analysis is being used to guide the development of Moodle as a tool for improving processes within communities of reflective inquiry. At the time of writing (April 2003), Moodle has been translated into twenty-seven languages and is being used by many hundreds of educators around the world, including universities, schools and independent teachers. Introduction},
+	author = {Dougiamas, Martin and Taylor, Pc},
+	file = {:home/israel/Downloads/Moodle{\%}20Using{\%}20Learning{\%}20Communities{\%}20to{\%}20Create.pdf:pdf},
+	isbn = {1880094487},
+	journal = {Research.Moodle.Net},
+	pages = {1--16},
+	title = {{Moodle: Using Learning Communities to Create an Open Source Course Management System}},
+	url = {http://research.moodle.net/pluginfile.php/15/mod{\_}data/content/1121/Moodle - Dougiamas - 2003.pdf},
+	year = {2003}
+}
+
+@article{chaves1999,
+	title={Tecnologia na educa{\c{c}}{\~a}o, ensino a dist{\^a}ncia, e aprendizagem mediada pela tecnologia: conceitua{\c{c}}{\~a}o b{\'a}sica},
+	author={CHAVES, Eduardo},
+	journal={Revista Educa{\c{c}}{\~a}o da Faculdade de Educa{\c{c}}{\~a}o da Pontif{\'\i}cia Universidade Cat{\'o}lica de Campinas},
+	volume={3},
+	number={7},
+	year={1999}
+}
+
 
 @MastersThesis{Perin2014,
 	author = {Perin, Wagner de Andrade},
@@ -120,6 +141,15 @@
 	Urlaccessdate = {08/11/2016},
 	year = {2005}
 }
+
+@misc{MoodleStat2016,
+	author = {Moodle},
+	title = {{Moodle Statistics}},
+	url = {https://moodle.net/stats/},
+	Urlaccessdate = {16/11/2016},
+	year = {2016}
+}
+
 
 @article{Franciscato2008,
 	abstract = {Esse artigo apresenta, os resultados decorrentes da elabora{\c{c}}{\~{a}}o de um instrumento de avalia{\c{c}}{\~{a}}o e a sua aplica{\c{c}}{\~{a}}o nos ambientes Moodle, TelEduc e Tidia – Ae. Os question{\'{a}}rios e as an{\'{a}}lises foram realizados por alunos de P{\'{o}}s – Gradua{\c{c}}{\~{a}}o da Universidade Federal de Santa Maria, com o objetivo de proporcionar a utiliza{\c{c}}{\~{a}}o de tr{\^{e}}s ambientes distintos para ampliar as experi{\^{e}}ncias com ambientes virtuais de aprendizagem (AVAs) e desenvolver condi{\c{c}}{\~{o}}es para realizar avalia{\c{c}}{\~{o}}es cr{\'{i}}ticas. Os resultados tamb{\'{e}}m foram submetidos aos gestores de EAD e a equipe de TI para tomarem conhecimento das sugest{\~{o}}es de melhorias nos AVAs utilizados na Institi{\c{c}}{\~{a}}o (Moodle na EAD e TelEduc no ensino presencial).},
