--- a/abntex2-modelo-trabalho-academico.tex
+++ b/abntex2-modelo-trabalho-academico.tex
@@ -487,39 +487,55 @@ Observamos uma carência de softwares que permitam a construção e edição de 
 %O Moodle
 %Mapas conceituais e educação a distância.
 % ---
-\section{Conceituando educação a distância}
+\section{Conceitos Básicos de EaD e o Moodle}
 
-A educação a distância é definida de diversas  formas por autores diferentes, apesar disso é possível extrair destas definições distintas um conceito de EAD. Abaixo alguns exemplos dessas definições:
- \begin{itemize}
- 	\item Dohemem define EAD como um sistema no qual o aluno estuda sozinho através de um material que lhe é apresentado, sendo o desempenho do estudante acompanhado por um grupo de professores. Esta forma de estudo é possível utilizando meios de comunicação de longa distância.
- 	\item Peters conceitua EAD como um método de compartilhar conhecimento através do uso de meios de comunicação, através do qual se torna possível instruir um grande número de alunos.
- 	\item segundo Moore EAD é um método no qual os professores agem de forma independente das ações dos estudantes e a comunicação entre ambos deve ser feita através de meios impressos ou eletrônicos.
- 	\item o conceito Chaves é de que a EAD é um ensino que ocorre quando há uma separação física entre mestre e aprendiz, sendo utilizadas tecnologias de transmissão de voz, dados e imagens para a comunicação entre ambos.  
- \end{itemize} 
- 
- A EAD também é definida no Decreto nº 5.622 de 19 de dezembro de 2005\cite{BRASIL2005}.
+Segundo \citeonline{chaves1999} EAD é um ensino que ocorre quando há uma separação física entre mestre e aprendiz, sendo utilizadas tecnologias de transmissão de voz, dados e imagens para a comunicação entre ambos. A EAD também é definida no Decreto nº 5.622 de 19 de dezembro de 2005\cite{BRASIL2005}.
  \begin{citacao}
  	Art. 1o  Para os fins deste Decreto, caracteriza-se a educação a distância como modalidade educacional na qual a mediação didático-pedagógica nos processos de ensino e aprendizagem ocorre com a utilização de meios e tecnologias de informação e comunicação, com estudantes e professores desenvolvendo atividades educativas em lugares ou tempos diversos\cite{BRASIL2005}.
  \end{citacao}
  
-Em síntese é possível definir a educação a distância como um método de ensino no qual estudante e professor ficam separados fisicamente e a interação e feita através de tecnologias de comunicação (que podem ser dos mais diversos) de maneira a contornar esta separação. Hoje em dia, como sabemos, utiliza-se a Internet como meio de interação entre professor e alunos, mas antes da Internet outras tecnologias de comunicação fizeram parte da historia da educação a distância permitindo que o aprendizado de cursos diversos não precisassem obrigatoriamente de uma sala de aula, o que abriu horizontes para professores e alunos.
+Em síntese é possível definir a educação a distância como um método de ensino no qual estudante e professor ficam separados fisicamente e a interação e feita através de tecnologias de comunicação (que podem ser dos mais diversos) de maneira a contornar esta separação.
 
-\section{Origem da educação a distância}
-A educação a distância, ao contrario do que se pensa, surgiu muito antes da existência da Internet, porém a sua origem exata é alvo de controvérsias. Existem compêndios que apontam as epístolas de São Paulo a comunidades cristãs da Ásia Menor como a origem da educação a distância. Estas epístolas foram enviadas no século I e ensinavam as comunidades a viver segundo a doutrina cristã\cite{gouvea2006}.
-
-\citeonline{Sherry1996} aponta os cursos por correspondência europeus como a primeira forma de educação a distância.
-Segundo \citeonline{landim1997} inicialmente a educação a distância fazia parte de iniciativas isoladas de alguns educadores, sendo somente institucionalizada na segunda metade do século XIX.
-
-Alguns acontecimentos importante na história da EAD foram a criação da primeira escola de línguas por correspondência em Berlim, no ano de 1856; em 1892 foi criada a Divisão de Ensino por Correspondência na Universidade de Chicago; o nascimento da Tele Escola Primária do Ministério da Cultura e Educação, na Argentina em 1960; entre outros\cite{Alves2011}.
-
-A evolução da EAD pode ser resumida em cinco gerações, de acordo com as tecnologias utilizadas. A primeira geração seria a educação por correspondência. Já a segunda, ocorre na década de 60 e se baseia no uso do rádio e televisão. A terceira, a partir dos anos 80, é representada por softwares multimídia e acesso a Internet como forma de obtenção de conhecimento. A quarta geração consiste no uso de ambientes virtuais de aprendizagem onde a interação entre professores e estudantes é realizada através da Internet. A quinte e última é representada por ambientes de realidade virtual\cite{maia2003}.
-
-Atualmente a educação a distância está relacionada ao uso de um AVA, que nada mais é que um sistema computacional cuja finalidade é prover suporte a atividades mediadas pelas tecnologias de informação e comunicação\cite{Almeida2010}. É um ambiente virtual de aprendizagem que tem como objetivo integrar mídias e recursos, além de apresentar informações de forma organizada e permitir interação entre estudantes, tutores e professores\cite{Franciscato2008}. Um exemplo de um AVA utilizado em algumas instituições de ensino é o Moodle.
+Atualmente a educação a distância está relacionada ao uso de um AVA, que nada mais é que um sistema computacional cuja finalidade é prover suporte a atividades mediadas pelas tecnologias de informação e comunicação\cite{Almeida2010}. É um ambiente que tem como objetivo integrar mídias e recursos, além de apresentar informações de forma organizada e permitir interação entre estudantes, tutores e professores\cite{Franciscato2008}. Um exemplo de um AVA são os cursos que podem ser criados e gerenciados no Moodle.
    
-\section{O Moodle}
-O \begin{otherlanguage*}{english}\textit{Modular Object Oriented Distance Learning (Moodle)}\end{otherlanguage*} é um ambiente virtual de aprendizagem que foi criado por Martin Dougiamas em 1999. Ele é uma aplicação \begin{otherlanguage*}{english}\textit{open-source}\end{otherlanguage*}, o que significa que ele é livre para ser instalado, utilizado, modificado e distribuído. Ele é amplamente usado por instituições em todo o mundo e possui uma grande comunidade que contribui para correção de erros e criação de novas ferramentas. \cite{Ribeiro2007}
+O \begin{otherlanguage*}{english}\textit{Modular Object Oriented Distance Learning (Moodle)}\end{otherlanguage*} é sistema gerenciador de cursos que foi criado por Martin Dougiamas em 1999. Ele é uma aplicação \begin{otherlanguage*}{english}\textit{open-source}\end{otherlanguage*}, o que significa que ele é livre para ser instalado, utilizado, modificado e distribuído \cite{Dougiamas2003}. Ele é amplamente usado por instituições em todo o mundo, possuindo mais de 73 mil sites registrados em 232 países\cite{MoodleStat2016}, e possui uma grande comunidade que contribui para correção de erros e criação de novas ferramentas.
 
-O \begin{otherlanguage*}{english}\textit{Moodle}\end{otherlanguage*} trabalha com cinco perfis de usuário: administrador, criador de cursos, professor, aluno e visitante. O administrador é o responsável técnico, é ele quem realiza a instalação e configuração do ambiente, além de manter ele funcionando corretamente. Já o criador de cursos tem como responsabilidade a criação e configuração dos cursos disponíveis na plataforma. Por sua vez, o professor tem como função o acompanhamento dos estudantes e a inserção de recursos e tarefas nos cursos. O aluno é quem realiza o curso, é ele quem vai utilizar os recursos e tarefas disponíveis no AVA. Por fim, o visitante é um usuário que só tem acesso as informações disponíveis na tela inicial do sistema. A \autoref{fig_moodle} mostra a interface de um curso no Moodle.
+\begin{table}[htb]
+	\IBGEtab{%
+		\caption{Os 10 países que mais utilizam o Moodle.}%
+		\label{tabela-moodle}
+	}{%
+	\begin{tabular}{ccc}
+		\toprule
+		País & Sites Registrados \\
+		\midrule \midrule
+		Estados Unidos & 10.131 \\
+		\midrule 
+		Espanha & 7.067 \\
+		\midrule 
+		Brasil & 4.401 \\
+		\midrule 
+		Reino Unido & 3.486 \\
+		\midrule 
+		México & 3.464 \\
+		\midrule 
+		Alemanha & 2.444 \\
+		\midrule 
+		Itália & 2.414 \\
+		\midrule 
+		Austrália & 2.324 \\
+		\midrule 
+		Colômbia & 2.264 \\
+		\midrule 
+		Rússia & 1.993 \\
+		\bottomrule
+	\end{tabular}%
+}{%
+\fonte{\citeonline{MoodleStat2016}}%
+}
+\end{table}
+
+O \begin{otherlanguage*}{english}\textit{Moodle}\end{otherlanguage*} trabalha por padrão com cinco perfis de usuário: administrador, criador de cursos, professor, aluno e visitante. O administrador é o responsável técnico, é ele quem realiza a instalação e configuração do ambiente, além de manter ele funcionando corretamente. Já o criador de cursos tem como responsabilidade a criação e configuração dos cursos disponíveis na plataforma. Por sua vez, o professor tem como função o acompanhamento dos estudantes e a inserção de recursos e tarefas nos cursos. O aluno é quem realiza o curso, é ele quem vai utilizar os recursos e tarefas disponíveis no AVA. Por fim, o visitante é um usuário que só tem acesso as informações disponíveis na tela inicial do sistema. A \autoref{fig_moodle} mostra a interface de um curso no Moodle.
 
 
 \begin{figure}[htb]
