--- a/abntex2-modelo-trabalho-academico.tex
+++ b/abntex2-modelo-trabalho-academico.tex
@@ -456,13 +456,9 @@ Os mapas conceituais tem se destacado como alternativa a avaliação tradicional
 
 A construção de mapas conceituais é muito simples, uma caneta e um pedaço de papel são ferramentas suficientes para a confecção desse grafo. Porém a tarefa de revisá-lo, armazená-lo, e editá-lo a longo prazo  pode ser muito cansativa e complexa. A introdução do uso de computadores na confecção de mapas pode facilitar a tarefa \cite{Novak2006}.
 
-Os primeiros programas de computadores criados com este objetivo se limitavam a mostrar apenas os mapas na tela, sem oferecer nenhum recurso adicional a ferramenta. Com a popularização do uso de computadores e da Internet houve um aumento na oferta de aplicações que tem como objetivo a construção de mapas gráficos. Porém há uma grande confusão entre usuários e desenvolvedores sobre a diferença entre mapas conceituais, organogramas e mapas mentais, devido a semelhança entre os diagramas\cite{Perin2014}. Um mapa mental, por exemplo, é muito semelhante a um mapa conceitual pois apresenta ligações entre ideias, mas ao contrario de um mapa mental não possui uma palavra descritiva ligando essas ideias e criando organicidade entre as ideias. Portanto uma aplicação de criação de mapas mentais não permite a construção de um mapa conceitual. Segundo a pesquisa de \citeonline{Perin2014}, apenas o software CmapTools pode ser considerada uma ferramenta que oferece suporte a criação de mapas conceituais.
+Os primeiros programas de computadores criados com este objetivo se limitavam a mostrar apenas os mapas na tela, sem oferecer nenhum recurso adicional a ferramenta. Com a popularização do uso de computadores e da Internet houve um aumento na oferta de aplicações que tem como objetivo a construção de mapas gráficos. Porém há uma grande confusão entre usuários e desenvolvedores sobre a diferença entre mapas conceituais, organogramas e mapas mentais, devido a semelhança entre os diagramas\cite{Perin2014}. Um mapa mental, por exemplo, é muito semelhante a um mapa conceitual pois apresenta ligações entre ideias, mas ao contrario de um mapa mental não possui uma palavra descritiva ligando essas ideias e criando organicidade entre as ideias. Portanto uma aplicação de criação de mapas mentais não permite a construção de um mapa conceitual. 
 
-\begin{citacao}[english]
-	CmapTools  is  a  software  environment  developed  at  the  Institute for Human and Machine Cognition (IHMC) that empowers users, individually or  collaboratively, to represent their knowledge using concept maps, to share them with peers and colleagues, and to publish them\cite{Canas2004}.
-\end{citacao}
-
-Observamos uma carência de softwares que permitam a construção e edição de mapas conceituais. Grande parte das ferramentas para manipulação de mapas gráficos não foram desenvolvidas especificamente para criação de mapas conceituais, e esta foi a grande motivação que tivemos para a realização deste trabalho, visto que, esses mapas consistem em uma ferramenta que tem potencial para inovar o sistema de aprendizagem que conhecemos, principalmente na educação à distância
+Na seção 2.3 de sua dissertação de mestrado, \citeonline{Perin2014} realizou uma pesquisa sobre o estado da prática em mapas conceituais. Nela foi feito um levantamento sobre softwares que permitem a criação de mapas conceituais e quais são as funcionalidades oferecidas por eles. Nesta pesquisa ele observou uma carência de ferramentas específicas para a criação de mapas conceituais, sendo o CMapTools a única ferramenta que oferece suporte específico para a manipulação dos mapas.
   
 
 %\lipsum[1]
