--- a/abntex2-modelo-trabalho-academico.tex
+++ b/abntex2-modelo-trabalho-academico.tex
@@ -286,13 +286,13 @@
 % ---
 % Dedicatória
 % ---
-% \begin{dedicatoria}
-%    \vspace*{\fill}
-%    \centering
-%    \noindent
-%    \textit{ Este trabalho é dedicado às crianças adultas que,\\
-%    quando pequenas, sonharam em se tornar cientistas.} \vspace*{\fill}
-% \end{dedicatoria}
+\begin{dedicatoria}
+    \vspace*{\fill}
+    \centering
+    \noindent
+    \textit{ Este trabalho é dedicado às crianças adultas que,\\
+    quando pequenas, sonharam em se tornar cientistas.} \vspace*{\fill}
+\end{dedicatoria}
 % ---
 
 % ---
@@ -305,16 +305,16 @@
 % ---
 % Epígrafe
 % ---
-%\begin{epigrafe}
-%     \vspace*{\fill}
-% 	\begin{flushright}
-% 		\textit{``Não vos amoldeis às estruturas deste mundo, \\
-% 		mas transformai-vos pela renovação da mente, \\
-% 		a fim de distinguir qual é a vontade de Deus: \\
-% 		o que é bom, o que Lhe é agradável, o que é perfeito.\\
-% 		(Bíblia Sagrada, Romanos 12, 2)}
-% 	\end{flushright}
-% \end{epigrafe}
+\begin{epigrafe}
+     \vspace*{\fill}
+ 	\begin{flushright}
+ 		\textit{``Não vos amoldeis às estruturas deste mundo, \\
+ 		mas transformai-vos pela renovação da mente, \\
+ 		a fim de distinguir qual é a vontade de Deus: \\
+ 		o que é bom, o que Lhe é agradável, o que é perfeito.\\
+ 		(Bíblia Sagrada, Romanos 12, 2)}
+ 	\end{flushright}
+ \end{epigrafe}
 % ---
 
 % ---
@@ -337,16 +337,16 @@
 \end{resumo}
 
 % resumo em inglês
-% \begin{resumo}[Abstract]
-%  \begin{otherlanguage*}{english}
-%    This is the english abstract.
-% 
-%    \vspace{\onelineskip}
-% 
-%    \noindent 
-%    \textbf{Keywords}: latex. abntex. text editoration.
-%  \end{otherlanguage*}
-% \end{resumo}
+\begin{resumo}[Abstract]
+  \begin{otherlanguage*}{english}
+    This is the english abstract.
+ 
+    \vspace{\onelineskip}
+ 
+    \noindent 
+    \textbf{Keywords}: latex. abntex. text editoration.
+  \end{otherlanguage*}
+\end{resumo}
 
 
 % ---
@@ -444,7 +444,7 @@ Assim foi criada essa ferramenta gráfica, que tem como objetivo fazer uma repre
 	\end{center}
 	\legend{Fonte: \citeonline[p. 28]{Perin2014}}
 \end{figure}
-\section{Mapas conceituais e educação}
+\section{Mapas conceituais e educação}\label{sec-mapeduc}
 
 Os mapas conceituais podem ter diversas aplicações na educação, podem ser utilizados para representar o conhecimento adquirido em uma aula, ou então o conteúdo de um capítulo algum livro lido. Por se tratar de uma representação que é alimentada com novos conceitos conforme eles são adquiridos, pode ser utilizado pelo professor para acompanhar a aprendizagem de um estudante durante todo o período de um curso. Além disso, como os mapas conseguem representar a estrutura cognitiva de um indivíduo, eles podem ser utilizados também como método de avaliação de aprendizagem\cite{Perin2014}.
 
@@ -558,9 +558,9 @@ O fato do Moodle ser modular, ou seja, ser composto por módulos instaláveis, c
 \chapter{CMPAAS}
 \section{Origem}
 
-Vimos como os mapas conceituais são importantes para educação, seja para auxiliar o estudante a aprender novos conceitos, ou como método de avaliação, além de algumas outras aplicações educacionais. Porém, segundo \citeonline{Perin2014} não é só no ensino que há interesse no uso de mapas conceituais e de aplicações para manipulação dos mesmos, tendo o setor empresarial um grande interesse nestas ferramentas. 
+Na \autoref{sec-mapeduc} vimos como os mapas conceituais são importantes para educação, seja para auxiliar o estudante a aprender novos conceitos, ou como método de avaliação, além de algumas outras aplicações educacionais. 
 
-Apesar de haver este grande interesse acadêmico e empresarial em ferramentas computacionais para criação e manipulação de mapas, a fragmentação das pesquisas nesta área impede que o desenvolvimento destas aplicações ocorra de forma acelerada. Além disso, a integração de ferramentas já existentes facilitaria o progresso de novas pesquisas.
+Apesar de haver este grande interesse acadêmico em ferramentas computacionais para criação e manipulação de mapas, a fragmentação das pesquisas nesta área impede que o desenvolvimento destas aplicações ocorra de forma acelerada. Além disso, a integração de ferramentas já existentes facilitaria o progresso de novas pesquisas.
 
 Se houvesse uma infraestrutura de apoio a criação e manipulação de mapas conceituais o desenvolvimento de novas ferramentas seria facilitado. Um pesquisador poderia criar uma nova solução mais facilmente se não houvesse a necessidade dele se preocupar com toda uma estrutura de gestão de mapas. Por exemplo, alguém que queira desenvolver uma aplicação que avalie mapas conceituais poderia utilizar o conteúdo existente previamente em uma solução computacional de criação e armazenamento de mapas.
 
